--- a/style4.css
+++ b/style4.css
@@ -1,6 +1,6 @@
 
 body{
-	background-image: url(/Users/steven128/desktop/create1.jpg);
+	background-image: url(create1.jpg);
 	flex-wrap: wrap;
 	background-size: cover;
 }
